Modified Course view to account for Session.

--- a/GT_App/GT_App.csproj
+++ b/GT_App/GT_App.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Models\RoundDetail.cs">
       <DependentUpon>GT_AppModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SessionObj.cs" />
     <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>GT_AppModel.tt</DependentUpon>
     </Compile>
